cabal-version:      3.0

name:               aws-eventbridge-cron
version:            0.1.2.0
synopsis:           AWS EventBridge cron, rate, and one-time parser with scheduler
description:
  Parse AWS EventBridge cron, rate, and one-time expressions and compute
  the next run times from a base timestamp. The package validates AWS-specific
  extensions such as "?" day wildcards, nth weekdays (#), and last-weekday (L,
  LW) modifiers so you can rely on the same behaviour as AWS Scheduler cron
  schedules.
  .
  The README includes usage examples and notes on the guarantees provided by
  the evaluator.
category:           AWS, Cloud, Scheduling
homepage:           https://github.com/kushagarr/aws-eventbridge-cron#readme
bug-reports:        https://github.com/kushagarr/aws-eventbridge-cron/issues
author:             Kushagra Gupta
maintainer:         Kushagra Gupta <khushiitrans@gmail.com>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 9.6.* || == 9.8.* || == 9.10.* || == 9.12.*

extra-doc-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/kushagarr/aws-eventbridge-cron

library
  exposed-modules:
      AWS.EventBridge.Cron
    , AWS.EventBridge.Schedule
  other-modules:
      AWS.EventBridge.DayOfMonth
    , AWS.EventBridge.DayOfWeek
    , AWS.EventBridge.Hours
    , AWS.EventBridge.Minutes
    , AWS.EventBridge.Months
    , AWS.EventBridge.Years
    , AWS.EventBridge.Rate
    , AWS.EventBridge.OneTime
  hs-source-dirs:
      src
  default-language: GHC2021
  ghc-options:
      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.14 && <5
    , containers
    , megaparsec
    , text
    , time
    , tz
    , tzdata

test-suite aws-eventbridge-cron-test
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
    , src
  main-is: Main.hs
  other-modules:
      AWS.EventBridge.DayOfMonthSpec
    , AWS.EventBridge.DayOfWeekSpec
    , AWS.EventBridge.HoursSpec
    , AWS.EventBridge.MinutesSpec
    , AWS.EventBridge.MonthsSpec
    , AWS.EventBridge.YearsSpec
    , AWS.EventBridge.RateSpec
    , AWS.EventBridge.CronSpec
    , AWS.EventBridge.Schedule
    , AWS.EventBridge.ScheduleSpec
    , AWS.EventBridge.OneTimeSpec
    , TestSupport
    , AWS.EventBridge.Cron
    , AWS.EventBridge.DayOfMonth
    , AWS.EventBridge.DayOfWeek
    , AWS.EventBridge.Hours
    , AWS.EventBridge.Minutes
    , AWS.EventBridge.Months
    , AWS.EventBridge.Years
    , AWS.EventBridge.Rate
    , AWS.EventBridge.OneTime
  default-language: GHC2021
  ghc-options: -Wall
  build-depends:
      aws-eventbridge-cron
    , base >=4.14 && <5
    , containers
    , megaparsec
    , QuickCheck >=2.14 && <2.16
    , tasty >=1.4 && <1.6
    , tasty-hunit >=0.10 && <0.11
    , tasty-quickcheck >=0.10 && <0.11
    , text
    , time
    , tz
    , tzdata

benchmark aws-eventbridge-cron-bench
  type: exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is: Main.hs
  default-language: GHC2021
  ghc-options: -O2
  build-depends:
      aws-eventbridge-cron
    , base >=4.14 && <5
    , criterion >=1.5 && <1.7
    , text
    , time
    , tz
